Fixed checkDone display on mobile

--- a/src/assets/styles/_taskDisplay.scss
+++ b/src/assets/styles/_taskDisplay.scss
@@ -82,6 +82,10 @@
       width: 100%;
       flex-direction: column;
 
+      .check-done-div {
+        display: flex;
+        justify-content: flex-end;
+      }
       .info-container {
         width: 100%;
       }
